force-app/main/default/objects/Region__c/Region__c.object-meta.xml
<CustomObject>
    <description>Part of our segmentation, Region tracks areas where EDF works and can be tiered using Parent Region</description>
    <label>Region</label>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>