force-app/main/default/objects/Region__c/fields/NetSuite_Region_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Region_ID__c</fullName>
    <externalId>true</externalId>
    <label>NetSuite Region ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>