force-app/main/default/objects/Region__c/fields/Parent_Region__c.field-meta.xml
<CustomField>
    <fullName>Parent_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipName>Regions</relationshipName>
    <type>Lookup</type>
</CustomField>